@@ -2,6 +2,7 @@ v3.xx 2013//
 ~~~~~~~~~~~~~~~~
 Edit: Minor edits in Sections WILA, SSLE, RREF, TSS, HSE, NM
 Edit: Extended slightly the conclusion of Theorem HSC
+Change: Theorem ISRN demoted to Exercise TSS.T11
 
 
 v3.10 2013/08/20
